# vault-search

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-07-vault-search.md
docs/superpowers/specs/: 2026-06-07-vault-search-design.md
golden/: colregs.yaml
src/vault_search/: __init__.py  chunk.py  cli.py  embed.py  eval.py  index.py  models.py  profiles.py  search.py
tests/: test_api.py  test_chunk.py  test_cli.py  test_embed.py  test_eval.py  test_index.py  test_models.py  test_search.py  test_smoke.py
tests/fixtures/vault/rules/: rule-25.md  rule-30.md
