[project]
name = "vault-search"
version = "0.2.1"
description = "Vault-agnostic local-first hybrid retrieval for markdown knowledge vaults"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.3",
    "sqlite-vec>=0.1.6",
    "python-frontmatter>=1.1",
    "pyyaml>=6",
    "typer>=0.12",
]

[project.scripts]
vault-search = "vault_search.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
